--- a/style.css
+++ b/style.css
@@ -5,21 +5,26 @@ body{
 header {
 
 }
+
+.header__logo{
+    display: inline;
+}
+
 .header__title{
     text-align: center;
     font-weight: bold;
     font-size: 3rem;
 }
+
 .header__navbar__list{
     display: flex;
     justify-content: center;
-
 }
+
 .header__navbar__list-item{
     list-style: none;
     border: 2px solid ;
     padding: 1% 3%;
     border-radius: 10px;
     margin: 2% 1%;
-
 }
