--- a/style.css
+++ b/style.css
@@ -1,30 +1,84 @@
-body{
-    
+body {
+    margin: 0;
+    padding: 0;
 }
 
 header {
+    background-color: rgb(37, 36, 36);
+    display: flex;
+    height: 1%;
+    justify-content: left;
+    align-items: baseline;
 
 }
 
-.header__logo{
-    display: inline;
+.header__logo {
+    width: 3%;
+    height: 3%;
 }
 
-.header__title{
-    text-align: center;
+.header__logo:hover {
+    animation: wobble 1s ease infinite;
+}
+
+.header__title {
+    color: white;
     font-weight: bold;
     font-size: 3rem;
 }
 
-.header__navbar__list{
+.header__navbar {}
+
+.header__navbar__list {
     display: flex;
-    justify-content: center;
 }
 
-.header__navbar__list-item{
+.header__navbar__list-item {
+    color: white;
     list-style: none;
-    border: 2px solid ;
+    border: 2px solid;
     padding: 1% 3%;
     border-radius: 10px;
     margin: 2% 1%;
+}
+
+
+
+
+/* ANIMATION */
+
+@keyframes wobble {
+
+    0%,
+    100% {
+        -webkit-transform: translateX(0%);
+        transform: translateX(0%);
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+    }
+
+    15% {
+        -webkit-transform: translateX(-10px) rotate(-15deg);
+        transform: translateX(-10px) rotate(-15deg);
+    }
+
+    30% {
+        -webkit-transform: translateX(calc(10px / 2)) rotate(15deg);
+        transform: translateX(calc(10px / 2)) rotate(15deg);
+    }
+
+    45% {
+        -webkit-transform: translateX(calc(-10px / 2)) rotate(calc(-15deg / 1.8));
+        transform: translateX(calc(-10px / 2)) rotate(calc(-15deg / 1.8));
+    }
+
+    60% {
+        -webkit-transform: translateX(calc(10px / 3.3)) rotate(calc(15deg / 3));
+        transform: translateX(calc(10px / 3.3)) rotate(calc(15deg / 3));
+    }
+
+    75% {
+        -webkit-transform: translateX(calc(-10px / 5.5)) rotate(calc(-15deg / 5));
+        transform: translateX(calc(-10px / 5.5)) rotate(calc(-15deg / 5));
+    }
 }
