--- a/style.css
+++ b/style.css
@@ -1,20 +1,34 @@
+/* font-family: 'Bakbak One', cursive;
+font-family: 'Roboto', sans-serif; */
+
+
+
 body {
     margin: 0;
     padding: 0;
+    background-color: rgb(88, 84, 84);
+    display: flex;
 }
 
+/***************HEADER***************/
+
 header {
-    background-color: rgb(37, 36, 36);
+    background-color: rgba(37, 36, 36, 0.5);
     display: flex;
-    height: 1%;
-    justify-content: left;
-    align-items: baseline;
+    flex-direction: column;
+    width: 10%;
+    height: 100vh;
+    text-align: center;
+    margin-left: 0;
+    font-family: 'Bakbak One', cursive;
+    box-shadow: 10px 0 5px black ;
+
 
 }
 
 .header__logo {
-    width: 3%;
-    height: 3%;
+    margin-bottom: 5%;
+
 }
 
 .header__logo:hover {
@@ -25,23 +39,49 @@ header {
     color: white;
     font-weight: bold;
     font-size: 3rem;
+    margin-bottom: 5%;
 }
 
 .header__navbar {}
 
 .header__navbar__list {
-    display: flex;
+    margin-top: 5%;
+    font-size: 2rem;
+
 }
 
 .header__navbar__list-item {
     color: white;
     list-style: none;
-    border: 2px solid;
-    padding: 1% 3%;
-    border-radius: 10px;
-    margin: 2% 1%;
+    border-top: 2px solid;
+    border-bottom: 2px solid;
+    padding: 10% 3%;
+
 }
 
+.header__navbar__list-item-link{
+    text-decoration: none;
+    color: white;
+    padding: 8% 30%;
+
+}
+
+.header__navbar__list-item-link:hover{
+    background-color: rgba(88, 84, 84, 0.5);
+}
+
+
+/***************MAIN***************/
+
+main{
+    font-family: 'Roboto', sans-serif;
+    margin: 2% 2%;
+
+}
+
+.main__title{
+    font-size: 3rem;
+}
 
 
 
